frontend/src/Modal.css
.Modal {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    position: fixed;
    top: 40px;
    left: 5%;
    width: 90vw;
    height: 90vh;
    max-width: 500px;
    background-color: var(--white);
    box-shadow: 0 3px 40px 10px rgba(0,0,0,0.7);
    border-radius: 5px;
    z-index: 1100;
}

.overlay {
    position: fixed;
    background-color: var(--black);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 1000;
}

.Modal__header {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: calc(100% - 20px);
    justify-content: space-between;
    color: var(--accent-1);
    flex-grow: 1;
}

.Modal__header h1 {
    font-size: calc(32px * .9);
    font-weight: bold;
}

.Modal__content {
    display: flex;
    flex-direction: column;
    width: calc(100% - 40px);
    height: 100%;
    overflow-y: auto;
    flex-grow: 4;
    padding: 10px 20px;
}

.Modal__footer {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    width: 100%;
    flex-grow: 1;
    align-self: flex-end;
}

